force-app/main/default/objects/cgcloud__BO_API_Workflow_Step__c/cgcloud__BO_API_Workflow_Step__c.object-meta.xml
<CustomObject>
    <description>This table holds the workflow step definitions.</description>
    <label>Business Object API Workflow Step</label>
    <nameField>
        <label>Business Object API Workflow Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Object API Workflow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>