force-app/main/default/objects/cgcloud__BO_API_Workflow_Step__c/fields/cgcloud__Classname__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Classname__c</fullName>
    <description>Callable class implementing the Workflow Step.</description>
    <inlineHelpText>Defines the callable class implementing the Workflow Step</inlineHelpText>
    <label>Classname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>