force-app/main/default/objects/cgcloud__BO_API_Workflow_Step__c/fields/cgcloud__Entity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Entity__c</fullName>
    <description>The Entity in the input or output JSON this step targets.</description>
    <inlineHelpText>Defines the entity in the input or output JSON this step targets.</inlineHelpText>
    <label>Entity</label>
    <referenceTo>cgcloud__BO_API_Entity__c</referenceTo>
    <relationshipLabel>Workflow Steps</relationshipLabel>
    <relationshipName>BO_API_Workflow_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>