force-app/main/default/objects/cgcloud__BO_API_Workflow_Step__c/fields/cgcloud__Method__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Method__c</fullName>
    <description>Method to pass to the Workflow Step.</description>
    <inlineHelpText>Defines the.method to pass to the Workflow Step.</inlineHelpText>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>