force-app/main/default/objects/cgcloud__BO_API_Workflow_Step__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Classname__c</columns>
    <columns>cgcloud__Method__c</columns>
    <columns>cgcloud__Entity__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>